--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -16,6 +16,11 @@
 		
 		<div class="row">
 			<div class="container col-md-4 col-md-offset-4">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#">Registrieren</a></li>
+					<li><a href="/update">Aktualisieren</a></li>
+				</ul>
+
 				<h2>Registriere einen nicht coolen dynamischen DNS-Namen</h2>
 				<form role="form" method="POST" action="/api/domain/new">
 					<div class="form-group">
