--- a/templates/update.tmpl
+++ b/templates/update.tmpl
@@ -16,6 +16,11 @@
 		
 		<div class="row">
 			<div class="container col-md-4 col-md-offset-4">
+				<ul class="nav nav-tabs">
+					<li><a href="/index">Registrieren</a></li>
+					<li class="active"><a href="#">Aktualisieren</a></li>
+				</ul>
+
 				<h2>Bearbeite deinen nicht coolen dynamischen DNS-Namen</h2>
 				<form role="form" method="POST" action="/api/domain/update">
 					<div class="form-group">
