web: fixed index link in update template

--- a/templates/update.tmpl
+++ b/templates/update.tmpl
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="container col-md-4 col-md-offset-4">
 				<ul class="nav nav-tabs">
-					<li><a href="/index">Registrieren</a></li>
+					<li><a href="/">Registrieren</a></li>
 					<li class="active"><a href="#">Aktualisieren</a></li>
 				</ul>
 
