--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Nicht coolen dynamischen Domainnamen bearbeiten</title>
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="nichtcool.css">
+		<link rel="stylesheet" href="/nichtcool.css">
 	</head>
 	<body>
 		<div class="page-header">
