--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -40,21 +40,24 @@
 						<span class="help-block">Wird beim Aktualisieren der IP verwendet.</span>
 					</div>
 					<div class="form-group">
-					<!-- begin of recaptcha code -->
-						<script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k={{.Rcpublic}}"></script>
-						<noscript>
-							<iframe src="http://www.google.com/recaptcha/api/noscript?k=your_public_key" height="300" width="500" frameborder="0"></iframe><br>
-							<textarea name="recaptcha_challenge_field" rows="3" cols="40"></textarea>
-							<input type="hidden" name="recaptcha_response_field" value="manual_challenge">
-						</noscript>
-					<!-- end of recaptcha code -->
+						<div id="recaptcha-container">
+							<!-- begin of recaptcha code -->
+								<script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k={{.Rcpublic}}"></script>
+								<noscript>
+									<iframe src="http://www.google.com/recaptcha/api/noscript?k=your_public_key" height="300" width="500" frameborder="0"></iframe><br>
+									<textarea name="recaptcha_challenge_field" rows="3" cols="40"></textarea>
+									<input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+								</noscript>
+							<!-- end of recaptcha code -->
+						</div>
 					</div>
-					<!-- the following button is necessary as padding to make the container big enough to accomodate the
-					right-flushed submit button. Tested in firefox 29.0 -->
-					<button class="btn btn-danger" style="visibility: hidden">&nbsp;</button>
 					<button type="submit" class="btn btn-success pull-right">Los!</button>
 				</form>
-				<footer class="footer">
+			</div>
+		</div>
+		<div class="row">
+			<div class="container col-md-4 col-md-offset-4">
+				<div class="footer">
 					<h4>Nutzungsbedingungen</h4>
 					<small>
 						<p>
@@ -75,7 +78,7 @@
 							<a href="impressum.html">Impressum</a>.
 						</p>
 					</small>
-				</footer>
+				</div>
 			</div>
 		</div>
 	</body>
