web: Changed form api URLs

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -25,7 +25,7 @@
 				{{ range .Err}}
 				<div class="alert alert-warning">{{.}}</div>
 				{{end}}
-				<form role="form" method="POST" action="/api/domain/new">
+				<form role="form" method="POST" action="/">
 					<div class="form-group">
 						<label for="domainInput">Domainname</label>
 						<div class="input-group">
