--- a/templates/update.tmpl
+++ b/templates/update.tmpl
@@ -28,7 +28,7 @@
 				{{ range .Success}}
 				<div class="alert alert-success">{{.}}</div>
 				{{end}}
-				<form role="form" method="POST" action="/api/domain/update">
+				<form role="form" method="POST" action="/update">
 					<div class="form-group">
 						<label for="domainInput">Domainname:</label>
 						<div class="input-group">
