--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -29,14 +29,14 @@
 					<div class="form-group">
 						<label for="domainInput">Domainname</label>
 						<div class="input-group">
-							<input type="text" class="form-control" id="domainInput" name="domain" placeholder="deine.mutter" value="{{.F.Hostname}}">
+							<input type="text" class="form-control" id="domainInput" name="domain" placeholder="deine.mutter" value="{{.F.Hostname}}" required>
 							<span class="input-group-addon">.ist.nicht.cool</span>
 						</div>
 						<span class="help-block">Die letzte Komponente des angegeben Namens wird als Wildcard-Subdomain registriert, d.h. <tt>deine.mutter.ist.nicht.cool</tt> wird zu <tt>*.mutter.ist.nicht.cool</tt>.</span>
 					</div>
 					<div class="form-group">
 						<label for="secretInput">Aktualisierungspasswort</label>
-						<input type="password" class="form-control" id="secretInput" name="secret" placeholder="hunter1">
+						<input type="password" class="form-control" id="secretInput" name="secret" placeholder="hunter1" required>
 						<span class="help-block">Wird beim Aktualisieren der IP verwendet.</span>
 					</div>
 					<div class="form-group">
