web: automatic conversion to fqdn

--- a/templates/update.tmpl
+++ b/templates/update.tmpl
@@ -42,7 +42,7 @@
 					</div>
 					<div class="form-group">
 						<label for="cnameInput">DNS-Alias (CNAME)</label>
-						<input type="text" class="form-control" id="cnameInput" name="cname" placeholder="Hier Ziel des Alias eingeben" value="{{ .F.CNames}}">
+						<input type="text" class="form-control" id="cnameInput" name="cname" placeholder="Hier Ziel des Alias eingeben" value="{{ .F.CName}}">
 						<span class="help-block">Kann nicht gleichzeitig mit anderen Einträgen verwendet werden.</span>
 					</div>
 					<div class="form-group">
